versioned_docs/version-2.12/reference/subsystems/ktlint.mdx
---
title: ktlint
description: |
  Ktlint, the anti-bikeshedding Kotlin linter with built-in formatter (https://ktlint.github.io/)
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Ktlint, the anti-bikeshedding Kotlin linter with built-in formatter (https://ktlint.github.io/)

Backend: <span className="color--primary">`pants.backend.experimental.kotlin.lint.ktlint`</span>

Config section: <span className="color--primary">`[ktlint]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]ktlint-skip`}
  env_repr='PANTS_KTLINT_SKIP'
  toml_repr={`[ktlint]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use Ktlint when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--ktlint-version=<str>`}
  env_repr='PANTS_KTLINT_VERSION'
  toml_repr={`[ktlint]
version = <str>`}
  default_repr={`0.45.2`}
>

Version string for the tool. This is available for substitution in the `[ktlint].artifacts` option by including the string `{version}`.

</Option>

### `artifacts`

<Option
  cli_repr={`--ktlint-artifacts="['<str>', '<str>', ...]"`}
  env_repr='PANTS_KTLINT_ARTIFACTS'
  toml_repr={`[ktlint]
artifacts = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "com.pinterest:ktlint:{version}"\n]`}
>

Artifact requirements for this tool using specified as either the address of a `jvm_artifact` target or, alternatively, as a colon-separated Maven coordinates (e.g., group:name:version). For Maven coordinates, the string `{version}` version will be substituted with the value of the `[ktlint].version` option.

</Option>

### `lockfile`

<Option
  cli_repr={`--ktlint-lockfile=<str>`}
  env_repr='PANTS_KTLINT_LOCKFILE'
  toml_repr={`[ktlint]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` option. See https://github.com/pantsbuild/pants/blob/release_2.12.1/src/python/pants/backend/kotlin/lint/ktlint/ktlint.lock for the default lockfile contents.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants jvm-generate-lockfiles --resolve=ktlint`.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
